@@ -28,6 +28,13 @@ If anyone ever tells you they need your root password, be extremely
 wary. You should normally never give your root password out, unless you
 are administering a machine with more than one system administrator.
 
+</para><para>
+
+In case you do not specify a password for the <quote>root</quote> user
+here, this account will be disabled but the <command>sudo</command> package
+will be installed later to enable administrative tasks to be carried out on
+the new system.
+
 </para>
   </sect3>
 
