@@ -11,6 +11,8 @@ installation-guide (2017XXXX) UNRELEASED; urgency=medium
     format. Closes: #344693
   * Globally use S/390 instead of s390 for consistency. Closes: #366380.
   * Document 255 characters limit for kernel command line. Closes: #397592.
+  * Document the installation of sudo, if no root password is given.
+    Closes: #692314
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 20 Jun 2017 01:17:02 +0200
 
